2002-02-25  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* mips-gp64-fp32-pic.d: Fix test of 64bit register loads.
	* mips-gp64-fp32-pic.s: Likewise.
	* mips-gp64-fp32.d: Likewise.
	* mips-gp64-fp32.s: Likewise.
	* mips-gp64-fp64-pic.d: Likewise.
	* mips-gp64-fp64-pic.s: Likewise.
	* mips-gp64-fp64.d: Likewise.
	* mips-gp64-fp64.s: Likewise.

2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* gas/sh/basic.exp: Don't run PIC tests for targets that don't
	support it.

2002-02-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/hppa/reloc/reloc.exp (labelopbug.s): Change test to suit
	hppa_fix_adjustable change.

2002-02-09  Richard Henderson  <rth@redhat.com>

	* gas/alpha/elf-reloc-5.s, gas/alpha/elf-reloc-5.d: New.
	* gas/alpha/elf-reloc-6.s, gas/alpha/elf-reloc-6.l: New.
	* gas/alpha/alpha.exp: Run them.

2002-02-08  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips.exp: Document (but do not XFAIL) currently-failing
	MIPS ECOFF tests, providing what information is known about
	the origins of the failures.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-02-01  Alexandre Oliva  <aoliva@redhat.com>
	* gas/sh/sh64/syntax-1.s: Remove `-4' from @(expr-4,pc).
	2002-01-28  Alexandre Oliva  <aoliva@redhat.com>
	* gas/sh/sh64/crange1-1.d: Formatting changes to match the current
	output of objdump.
	* gas/sh/sh64/crange1-2.d: Likewise.
	* gas/sh/sh64/crange2-2.d: Likewise.
	* gas/sh/sh64/crange3-1.d: Likewise.
	* gas/sh/sh64/crange4-1.d: Likewise.
	* gas/sh/sh64/datal-2.d: Likewise.
	* gas/sh/sh64/datal32-1.d: Likewise.
	* gas/sh/sh64/datal32-3.d: Likewise.
	* gas/sh/sh64/localcom-1.d: Likewise.
	* gas/sh/sh64/mix-1.d: Likewise.
	* gas/sh/sh64/pt32-1.d: Likewise.
	* gas/sh/sh64/rel32-1.d: Likewise.
	* gas/sh/sh64/rel32-2.d: Likewise.
	* gas/sh/sh64/rel32-3.d: Likewise.
	* gas/sh/sh64/rel32-4.d: Likewise.
	* gas/sh/sh64/rel32-5.d: Likewise.
	* gas/sh/sh64/ua32-1.d: Likewise.
	2001-03-14  DJ Delorie	<dj@redhat.com>